Fixes overflow issues on join network dialog

--- a/raiden/ui/web/src/app/components/token-input/token-input.component.css
+++ b/raiden/ui/web/src/app/components/token-input/token-input.component.css
@@ -1,3 +1,7 @@
 .checkbox {
-    padding-bottom: 0.8em;
+    padding-bottom: 1.1rem;
+}
+
+.form {
+    min-height: 5rem;
 }
